[gd_scene load_steps=9 format=3 uid="uid://ddkvyt3k7veat"]

[ext_resource type="Texture2D" uid="uid://x17rwkg802vl" path="res://assets/flying_player_sprite.png" id="1_2pcue"]
[ext_resource type="Script" path="res://scripts/player_flying.gd" id="1_78qii"]
[ext_resource type="Texture2D" uid="uid://bwlhef2ncvme2" path="res://assets/water_particle.png" id="3_dgaog"]
[ext_resource type="AudioStream" uid="uid://ce6ehwdqcyvl3" path="res://assets/bullet_sound.mp3" id="4_i47as"]
[ext_resource type="Texture2D" uid="uid://d0tpk6g08goql" path="res://assets/player_bullet_sprite.png" id="5_gqhpx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48sqc"]
size = Vector2(3, 3)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_b0ifu"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, -1, 0)
initial_velocity_min = 23.0
initial_velocity_max = 23.0
gravity = Vector3(0, 98, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ncf4i"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(0, -1, 1)
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, -1, 0)
initial_velocity_min = 73.0
initial_velocity_max = 73.0
gravity = Vector3(0, 98, 0)

[node name="player_flying" type="Node2D"]
script = ExtResource("1_78qii")

[node name="player_flying_sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_2pcue")

[node name="player_flying_area" type="Area2D" parent="."]

[node name="player_flying_collision" type="CollisionShape2D" parent="player_flying_area"]
shape = SubResource("RectangleShape2D_48sqc")

[node name="bullet_spawn_position" type="Marker2D" parent="."]
position = Vector2(0, -4)

[node name="bullet_cooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="water_timer" type="Timer" parent="."]
process_callback = 0
autostart = true

[node name="water_particle" type="GPUParticles2D" parent="."]
visible = false
position = Vector2(0, -1.5)
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_b0ifu")
texture = ExtResource("3_dgaog")
lifetime = 0.23
explosiveness = 1.0
randomness = 1.0

[node name="bullet_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_i47as")
volume_db = -7.3

[node name="player_bullet_particle" type="GPUParticles2D" parent="."]
position = Vector2(0, -1.5)
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_ncf4i")
texture = ExtResource("5_gqhpx")

[connection signal="area_entered" from="player_flying_area" to="." method="_on_player_flying_area_area_entered"]
[connection signal="timeout" from="water_timer" to="." method="_on_water_timer_timeout"]
